feat(bridge): :sparkles: new api endpoint for retrieve given bridge exist or not
